edition = "2023";  // successor to proto2 and proto3

package central;

import "storage/network_baseline.proto";
import "google/protobuf/go_features.proto";

option go_package = "./internalapi/central;central";
option features.(pb.go).api_level = API_OPAQUE;

message NetworkBaselineSync {
  repeated storage.NetworkBaseline network_baselines = 1;
}
